fix: font layout shift

--- a/public/style.css
+++ b/public/style.css
@@ -1,27 +1,3 @@
-@font-face {
-  font-family: "Chirp";
-  font-weight: 400;
-  font-display: swap;
-  src: url(chirp-regular-web.woff2) format("woff2");
-  font-style: normal;
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Chirp";
-  font-weight: 500;
-  src: url(chirp-medium-web.woff2) format("woff2");
-  font-style: normal;
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Chirp";
-  font-weight: 700;
-  src: url(chirp-bold-web.woff2) format("woff2");
-  font-style: normal;
-}
-
 :root {
   --background: #ffffff;
   --foreground: #101518;
@@ -43,7 +19,7 @@
   --border: #292d30;
 }
 
-html {
+body {
   font-family: "Chirp", sans-serif;
   background-color: var(--background);
   color: var(--foreground);
